[gd_scene load_steps=3 format=2]

[ext_resource path="res://screens/LevelCard.gd" type="Script" id=1]
[ext_resource path="res://resources/MainTheme.tres" type="Theme" id=2]

[node name="LevelCard" type="Control" groups=["level_card"]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 192.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 120.0
dragger_visibility = 1

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer/VSplitContainer"]
margin_right = 176.0
margin_bottom = 62.0
dragger_visibility = 1

[node name="LevelLabel" type="Label" parent="PanelContainer/VSplitContainer/VSplitContainer"]
margin_right = 176.0
margin_bottom = 25.0
text = "Level - 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/VSplitContainer/VSplitContainer"]
margin_top = 37.0
margin_right = 176.0
margin_bottom = 62.0
dragger_visibility = 1

[node name="WingsLabel" type="Label" parent="PanelContainer/VSplitContainer/VSplitContainer/HSplitContainer"]
margin_right = 49.0
margin_bottom = 25.0
text = "Wings:"
align = 1

[node name="SpiceLabel" type="Label" parent="PanelContainer/VSplitContainer/VSplitContainer/HSplitContainer"]
margin_left = 61.0
margin_right = 176.0
margin_bottom = 25.0
text = "Spice:"
align = 1

[node name="PlayButton" type="Button" parent="PanelContainer/VSplitContainer"]
margin_top = 74.0
margin_right = 176.0
margin_bottom = 112.0
text = "Play"

[connection signal="pressed" from="PanelContainer/VSplitContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
